# clash-cores

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CHANGELOG.md  README.md  cabal.project  cabal.project-1.8  cabal.project-common  cabal.project-flopoco  cabal.project-master  cabal.project-nix  clash-cores.cabal  default.nix  flake.nix  format.sh  shell.nix  stack.yaml
.ci/: build.sh  build_docs.sh  cabal.project-import-master  cabal.project.local  effective_cpus.sh  get_build_dist.sh  report_status.sh  setup.sh  test_cabal.sh  write-nix-config.sh
.ci/gitlab/: branch.yaml  common.yaml  nix.yaml  test.yaml
.github/: ci.yml
.github/scripts/: build.sh  hdl-tests.sh
.github/workflows/: ci.yml
hdl-tests/: Main.hs  cores-hdl-tests.cabal
hdl-tests/shouldwork/Xilinx/: DnaPortE2.hs  Floating.hs  Ibufds.hs  Ila.hs  TdpBlockRam.hs  VIO.hs
hdl-tests/shouldwork/Xilinx/DcFifo/: Basic.hs  Lfsr.hs
hdl-tests/shouldwork/Xilinx/Inst/: BiSignal.hs
nix/: nixpkgs.nix  sources.json
src/Clash/Core/TermLiteral/: Compat.hs
src/Clash/Cores/: Crc.hs  Etherbone.hs  LineCoding8b10b.hs  Rgmii.hs  SPI.hs  SerDes.hs  Sgmii.hs  UART.hs
src/Clash/Cores/ClashFloPoCo/: ClashFloPoCo.md  FloPoCoCall.hs  FloPoCoExample.hs  GenTemDSL.hs  Help.hs  Helpargs.hs  InfoEn.hs  Lexer.hs
src/Clash/Cores/Crc/: Catalog.hs  Internal.hs
src/Clash/Cores/Etherbone/: Base.hs  ConfigMaster.hs  RecordBuilder.hs  RecordProcessor.hs  WishboneMaster.hs
src/Clash/Cores/Etherbone/Examples/: FullEthernetCircuit.hs  Interconnect.hs  WishboneBus.hs  XilinxDemo.hs
src/Clash/Cores/Ethernet/: Arp.hs  IPv4.hs  Icmp.hs  InternetChecksum.hs  Mac.hs  Mdio.hs  Rgmii.hs  Udp.hs
src/Clash/Cores/Ethernet/Arp/: ArpManager.hs  ArpTable.hs  ArpTypes.hs
src/Clash/Cores/Ethernet/Examples/: ArpStack.hs  FullUdpStack.hs  RxStacks.hs  TxStacks.hs
src/Clash/Cores/Ethernet/IP/: EthernetStream.hs  IPPacketizers.hs  IPv4Types.hs  InternetChecksum.hs
src/Clash/Cores/Ethernet/Mac/: EthernetTypes.hs  FrameCheckSequence.hs  InterpacketGapInserter.hs  MacPacketizers.hs  PaddingInserter.hs  Preamble.hs
src/Clash/Cores/Gowin/GW2A/: IO.hs
src/Clash/Cores/Gowin/GW2A/Blackboxes/: IO.hs
src/Clash/Cores/LatticeSemi/ECP5/: IO.hs
src/Clash/Cores/LatticeSemi/ECP5/Blackboxes/: IO.hs
src/Clash/Cores/LatticeSemi/ICE40/: IO.hs
src/Clash/Cores/LatticeSemi/ICE40/Blackboxes/: IO.hs
src/Clash/Cores/LineCoding/: Lc5b6b.hs  Lc8b10b.hs
src/Clash/Cores/LineCoding/Lc5b6b/: Decoder.hs  Encoder.hs
src/Clash/Cores/LineCoding/Lc8b10b/: Decoder.hs  Encoder.hs
src/Clash/Cores/LineCoding8b10b/: Decoder.hs  Encoder.hs
src/Clash/Cores/Sgmii/: AutoNeg.hs  BitSlip.hs  Common.hs  PcsReceive.hs  PcsTransmit.hs  RateAdapt.hs  Sync.hs
src/Clash/Cores/Sgmii/PcsTransmit/: CodeGroup.hs  OrderedSet.hs
src/Clash/Cores/Xilinx/: BlockRam.hs  DcFifo.hs  Floating.hs  Ibufds.hs  Ila.hs  Internal.hs  VIO.hs  Xpm.hs
src/Clash/Cores/Xilinx/BlockRam/: BlackBoxes.hs  Internal.hs
src/Clash/Cores/Xilinx/DcFifo/Internal/: BlackBoxes.hs  Instances.hs  Types.hs
src/Clash/Cores/Xilinx/Ethernet/: Gmii.hs
src/Clash/Cores/Xilinx/Ethernet/Gmii/: Internal.hs
src/Clash/Cores/Xilinx/Floating/: Annotations.hs  BlackBoxes.hs  Explicit.hs  Internal.hs
src/Clash/Cores/Xilinx/Ila/: Internal.hs
src/Clash/Cores/Xilinx/Unisim/: DnaPortE2.hs
src/Clash/Cores/Xilinx/Unisim/DnaPortE2/: Internal.hs
src/Clash/Cores/Xilinx/VIO/Internal/: BlackBoxes.hs
src/Clash/Cores/Xilinx/Xpm/: Cdc.hs
src/Clash/Cores/Xilinx/Xpm/Cdc/: ArraySingle.hs  Gray.hs  Handshake.hs  Internal.hs  Pulse.hs  Single.hs  SyncRst.hs
src/Clash/Signal/: Extra.hs
src/Clash/Sized/Vector/: Extra.hs
src/Protocols/PacketStream/: Extra.hs
test/: clash-testsuite.hs  cores-testsuite.hs  unit-tests.hs  unittests.hs
test-suite/: Main.hs  clash-cores-test-suite.cabal
test/Test/Cores/: Crc.hs  Etherbone.hs  Ethernet.hs  LineCoding8b10b.hs  SPI.hs  SerDes.hs  UART.hs
test/Test/Cores/Etherbone/: Internal.hs  RecordBuilder.hs  RecordProcessor.hs  WishboneMaster.hs
test/Test/Cores/Ethernet/: Base.hs  Icmp.hs  InternetChecksum.hs  Mdio.hs
test/Test/Cores/Ethernet/Arp/: ArpManager.hs
test/Test/Cores/Ethernet/IP/: .IPPacketizers.hs.swp  EthernetStream.hs  IPPacketizers.hs  InternetChecksum.hs
test/Test/Cores/Ethernet/Mac/: FrameCheckSequence.hs  InterpacketGapInserter.hs  PaddingInserter.hs  Preamble.hs
test/Test/Cores/Internal/: SampleSPI.hs  Signals.hs
test/Test/Cores/LineCoding/: Lc5b6b.hs  Lc8b10b.hs
test/Test/Cores/SPI/: MultiSlave.hs
test/Test/Cores/Sgmii/: BitSlip.hs  Sgmii.hs  Sync.hs
test/Test/Cores/Xilinx/: BlockRam.hs  DcFifo.hs  DnaPortE2.hs
test/Test/Tasty/: Clash.hs  Common.hs  Ghdl.hs  Iverilog.hs  Modelsim.hs  Program.hs  SymbiYosys.hs  Verilator.hs  Vivado.hs
test/Test/Tasty/Clash/: CoreTest.hs
