cabal-version:       2.2

name:                clash-cores
version:             1.9.0
synopsis:            A collection of IP cores for Clash
description:         A collection of IP cores for Clash
bug-reports:         https://github.com/clash-lang/clash-cores/issues
license:             BSD-2-Clause
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
copyright:           Copyright © 2019     , Foamspace Corp.,
                                 2022-2023, QBayLogic B.V.
category:            Hardware
-- TODO: Revert to "Simple". See:
--
--   https://github.com/clash-lang/clash-compiler/pull/2665#issuecomment-1939044550
build-type:          Custom
extra-source-files:  CHANGELOG.md

flag doctests
  description:
    You can disable testing with doctests using `-f-doctests`.
  default: True
  manual: True

flag unit-tests
  description:
    You can disable testing with unit tests using `-f-unit-tests`.
  default: True
  manual: True

flag haddock
  description:
    Work-around haddock bug on GHC 8.6.*
  default: False
  manual: True

flag clash-18
  description:
    Disable cores that require a Clash version later than 1.8
  default: False

-- TODO: Remove this workaround. See:
--
--   https://github.com/clash-lang/clash-compiler/pull/2665#issuecomment-1939044550
custom-setup
  setup-depends:
    base,
    Cabal >= 3.10.3.0

common basic-config
  default-language: Haskell2010

  default-extensions:
    BinaryLiterals
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    MagicHash
    NoImplicitPrelude
    PostfixOperators
    NoStarIsType
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall -Wcompat

  if flag(haddock)
    ghc-options:
      -fdefer-type-errors
  else
    ghc-options:
      -fplugin GHC.TypeLits.Extra.Solver
      -fplugin GHC.TypeLits.Normalise
      -fplugin GHC.TypeLits.KnownNat.Solver
      -fconstraint-solver-iterations=16

  build-depends:
    base                      >= 4.18  && < 5,
    clash-protocols,
    constraints               >= 0.9   && < 1.0,
    containers                >=0.5    && <0.8,
    deepseq,
    ghc-typelits-extra        >= 0.3.2,
    ghc-typelits-knownnat     >= 0.6,
    ghc-typelits-natnormalise >= 0.6,
    infinite-list             ^>= 0.1,
    lens,
    QuickCheck,
    string-interpolate        ^>= 0.3,
    template-haskell          >= 2.12.0.0 && < 2.23,

  if flag(clash-18)
    build-depends:
      clash-lib               >= 1.8.1,
      clash-prelude           >= 1.8.1,
  else
    build-depends:
      clash-lib               >= 1.9.0,
      clash-prelude           >= 1.9.0,

library
  import: basic-config
  hs-source-dirs: src

  exposed-modules:
    Clash.Cores.Crc
    Clash.Cores.Crc.Internal
    Clash.Cores.Crc.Catalog
    Clash.Cores.Etherbone
    Clash.Cores.Etherbone.Base
    Clash.Cores.Etherbone.RecordBuilder
    Clash.Cores.Etherbone.RecordProcessor
    Clash.Cores.Etherbone.WishboneMaster
    Clash.Cores.Etherbone.ConfigMaster
    Clash.Cores.LatticeSemi.ECP5.Blackboxes.IO
    Clash.Cores.LatticeSemi.ECP5.IO
    Clash.Cores.LatticeSemi.ICE40.Blackboxes.IO
    Clash.Cores.LatticeSemi.ICE40.IO
    Clash.Cores.LineCoding.Lc8b10b
    Clash.Cores.LineCoding.Lc8b10b.Decoder
    Clash.Cores.LineCoding.Lc8b10b.Encoder
    Clash.Cores.SPI
    Clash.Cores.UART
    Clash.Cores.SerDes
    Clash.Cores.Xilinx.BlockRam
    Clash.Cores.Xilinx.BlockRam.BlackBoxes
    Clash.Cores.Xilinx.BlockRam.Internal
    Clash.Cores.Xilinx.DcFifo
    Clash.Cores.Xilinx.DcFifo.Internal.BlackBoxes
    Clash.Cores.Xilinx.DcFifo.Internal.Instances
    Clash.Cores.Xilinx.DcFifo.Internal.Types
    Clash.Cores.Xilinx.Floating
    Clash.Cores.Xilinx.Floating.Explicit
    Clash.Cores.Xilinx.Floating.Internal
    Clash.Cores.Xilinx.Ethernet.Gmii
    Clash.Cores.Xilinx.Ethernet.Gmii.Internal
    Clash.Cores.Xilinx.Ibufds
    Clash.Cores.Xilinx.Ila
    Clash.Cores.Xilinx.Ila.Internal
    Clash.Cores.Xilinx.Internal
    Clash.Cores.Xilinx.Unisim.DnaPortE2
    Clash.Cores.Xilinx.Unisim.DnaPortE2.Internal
    Clash.Cores.Xilinx.VIO
    Clash.Cores.Xilinx.VIO.Internal.BlackBoxes
    Clash.Cores.Xilinx.Xpm
    Clash.Cores.Xilinx.Xpm.Cdc
    Clash.Cores.Xilinx.Xpm.Cdc.ArraySingle
    Clash.Cores.Xilinx.Xpm.Cdc.Gray
    Clash.Cores.Xilinx.Xpm.Cdc.Handshake
    Clash.Cores.Xilinx.Xpm.Cdc.Internal
    Clash.Cores.Xilinx.Xpm.Cdc.Pulse
    Clash.Cores.Xilinx.Xpm.Cdc.Single
    Clash.Cores.Xilinx.Xpm.Cdc.SyncRst

  if !flag(clash-18)
    exposed-modules:
      Clash.Cores.Sgmii
      Clash.Cores.Sgmii.AutoNeg
      Clash.Cores.Sgmii.BitSlip
      Clash.Cores.Sgmii.Common
      Clash.Cores.Sgmii.PcsReceive
      Clash.Cores.Sgmii.PcsTransmit
      Clash.Cores.Sgmii.PcsTransmit.CodeGroup
      Clash.Cores.Sgmii.PcsTransmit.OrderedSet
      Clash.Cores.Sgmii.RateAdapt
      Clash.Cores.Sgmii.Sync

  other-modules:
    Clash.Core.TermLiteral.Compat
    Data.Text.Extra

  ghc-options:
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  build-depends:
    ghc-prim                >= 0.3.1.0 && < 1.0,
    mtl                     >= 2.1.1 && < 2.4,
    pretty-show,
    prettyprinter           >= 1.7 && < 1.8,
    prettyprinter-interp    ^>= 0.2,
    reducers                >= 3.12.2 && < 4.0,
    text                    >= 1.2.2 && < 2.2,
    unordered-containers,

test-suite unit-tests
  import: basic-config
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: unit-tests.hs

  if !flag(unit-tests)
    buildable: False

  other-modules:
    Test.Cores.Crc
    Test.Cores.Etherbone
    Test.Cores.Etherbone.Internal
    Test.Cores.Etherbone.WishboneMaster
    Test.Cores.Etherbone.RecordBuilder
    Test.Cores.Etherbone.RecordProcessor
    Test.Cores.Internal.SampleSPI
    Test.Cores.LineCoding.Lc8b10b
    Test.Cores.Internal.Signals
    Test.Cores.SPI
    Test.Cores.SPI.MultiSlave
    Test.Cores.UART
    Test.Cores.SerDes
    Test.Cores.Xilinx.BlockRam
    Test.Cores.Xilinx.DcFifo
    Test.Cores.Xilinx.DnaPortE2
    Test.Cores.Xilinx.Ethernet.Gmii

  if !flag(clash-18)
    other-modules:
      Test.Cores.Sgmii.AutoNeg
      Test.Cores.Sgmii.BitSlip
      Test.Cores.Sgmii.RateAdapt
      Test.Cores.Sgmii.Sgmii
      Test.Cores.Sgmii.Sync

  build-depends:
    clash-cores,
    clash-prelude-hedgehog,
    hedgehog,
    infinite-list,
    tasty                   >= 1.2 && < 1.6,
    tasty-hedgehog          >= 1.2.0,
    tasty-hunit,
    tasty-quickcheck,
    tasty-th,

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          doctests.hs
  ghc-options:      -Wall -Wcompat -threaded
  hs-source-dirs:   test

  if !flag(doctests)
    buildable: False
  else
    build-depends:
      base,
      clash-cores,
      doctest-parallel >= 0.2 && < 0.4,
      filepath,
